# yolov6_openvino

./: CMakeLists.txt  README.md  Serial.cpp  Serial.h  header.h  main.cpp  number_process.cpp
thirtyparty/runtime/cmake/: OpenVINOConfig-version.cmake  OpenVINOTargets-release.cmake  OpenVINOTargets.cmake
thirtyparty/runtime/lib/intel64/: libopenvino.so.2410  libopenvino_c.so.2024.1.0  libopenvino_c.so.2410  libopenvino_ir_frontend.so.2024.1.0  libopenvino_ir_frontend.so.2410  libopenvino_onnx_frontend.so.2410  libopenvino_paddle_frontend.so.2024.1.0  libopenvino_paddle_frontend.so.2410  libopenvino_pytorch_frontend.so.2024.1.0  libopenvino_pytorch_frontend.so.2410  libopenvino_tensorflow_frontend.so.2410  libopenvino_tensorflow_lite_frontend.so.2024.1.0  libopenvino_tensorflow_lite_frontend.so.2410
thirtyparty/runtime/lib/intel64/pkgconfig/: openvino.pc
weight/: best_ckpt.xml  my_ckpt.xml
